  * softwarecenter/app.py,
    softwarecenter/backend/channel.py,
    softwarecenter/view/channelpane.py,
    softwarecenter/view/viewswitcher.py:
    - implement channel views for installed items
  * softwarecenter/view/availablepane.py,
    softwarecenter/view/catview.py,
    softwarecenter/view/catview_gtk.py:
    - implement single-pane department screen

  [ Michael Vogt ]
  * mergedp:~arky/ubuntu/maverick/software-center/fixes-595500:
    - Fixes inaccessible install/remove buttons (LP: #538404)
    - Fixes inaccessible Screenshot image (LP: #595500)
    many thanks to Rakesh 'arky' Ambati 
  * merged lp:~mmcg069/software-center/catview-conform-w-spec
    to make the categories look like the spec
  * add information about "upgraded" packages to the history pane 
    (thanks to seb128 for the suggestion)
  * merged lp:~mvo/software-center/new-apps-test1 and
    lp:~mmcg069/software-center/catview-conform-w-spec, thanks
    to Matthew McGowan
  * merged lp:~mvo/software-center/update-from-var-lib-apt-lists
    to support meta-data in deb822 format in /var/lib/apt/lists

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 24 Jun 2010 22:50:56 -0400

software-center (2.1.3) maverick; urgency=low

  * softwarecenter/view/appview.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py:
    - fix visual glitch when updating a list view that contains
      a large number of items (LP: #592296)
  * po/POTFILES.in:
    - update to current set of modules
  * software-center,
    softwarecenter/app.py,
    data/ui/SoftwareCenter.ui:
    - only show login menu if --enable-lp at startup as this
      feature is still in development (LP: #592616)
  * softwarecenter/app.py:
    - set nav history menu items insensitive rather than
      hide them (LP: #594273) 
  * merged lp:~mmcg069/software-center/catview2-take3, further
    refinement of the category screen courtesy Matthew McGowan,
    many thanks! 
  * softwarecenter/view/availablepane.py: